2012-01-07  Albert Chu <chu11@llnl.gov>

	Merge serialkeepalive branch

	* libipmiconsole/: Add SERIAL_KEEPALIVE_EMPTY flag support.

	* libipmiconsole/ipmiconsole_processing.c
	(_serial_keepalive_timeout): Fix keepalive calculation to avoid
	spinning.

	* ipmiconsole/: Add --serial-keepalive-empty support.

	* configure.ac: Update versioning for libipmiconsole.
	
2012-01-07  Albert Chu <chu11@llnl.gov>

	* Update/fix various documentation and comments.

2012-01-06  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/: Fix usage output typo.

2012-01-06  Jan Safranek <jsafrane@redhat.com>

	* ipmidetectd/, bmc-watchdog/: Fix race in daemon setup code to
	function with new systemd.

2012-01-06  Albert Chu <chu11@llnl.gov>

	* Update/fix various documentation and comments.
	
2012-01-05  Albert Chu <chu11@llnl.gov>

	Merge 8269:8289 from c410x branch. 

	* ipmi-oem/: Support Dell C410x OEM extension slot-power-toggle,
	slot-power-control, get-port-map, and set-port-map.
	
2011-12-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-system-info-parameters-oem-spec.h: Fix macro names.
	
2011-12-22  Albert Chu <chu11@llnl.gov>

	Merge branch qsscs4r.
 
	* libfreeipmi/sel-parse/, libfreeipmi/interpret/: Support Quanta
	QSSC-S4R/Appro GB812X-CN OEM SEL Events.

	* libfreeipmi/interpret/, ipmi-sensors/: Re-organize code for
	future growth.  Most notably, split up OEM extensions into
	individual vendor files/functions.

	* ipmi-sensors/: Support Quanta QSSC-S4R OEM SDR records.

	* libfreeipmi/interpret/: Support Fan assert/deassert sensor/sel
	interpretations.  Support Quanta QSSC-S4R OEM sensors and SEL
	events.
	
2011-12-21  Albert Chu <chu11@llnl.gov>

	* Update/fix/remove OEM extension download links
	
2011-12-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c (ipmi_get_oem_specific_message):
	Fix bug loading incorrect tables.
